Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta1
-
RHEL 9.0 x64
Ubuntu22.04 x64
-
-
fbd776417 (dev), 02a58909f (6.6)
Description
Download and extract Qt6.6.0 beta1 sourche archive on linux. Prepare namespace build, configure:
cmake -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DQT_BUILD_EXAMPLES=OFF -DCMAKE_BUILD_TYPE=Release -DFEATURE_headersclean=ON -DFEATURE_separate_debug_info=OFF -DFEATURE_system_jpeg=OFF -DFEATURE_system_png=OFF -DFEATURE_system_pcre2=OFF -DFEATURE_system_harfbuzz=OFF -DFEATURE_system_doubleconversion=OFF -DFEATURE_libudev=OFF -DINPUT_bundled_xcb_xinput=yes -DOpenGL_GL_PREFERENCE=LEGACY -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DQT_NAMESPACE=RTA /home/qt/RTA/src-6.6.0 -DCMAKE_INSTALL_PREFIX:PATH=/home/qt/RTA/src-6.6.0/qtbase
Finishes fine, compile cmake --build . --parallel, fails:
[13459/13601] Building CXX object qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/qwebengineglobalsettings.cpp.o FAILED: qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/qwebengineglobalsettings.cpp.o /usr/bin/g++ -DBUILDING_CHROMIUM -DNOMINMAX -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_WEBENGINECORE_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x050000 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NAMESPACE=RTA -DQT_NETWORK_LIB -DQT_NO_AS_CONST -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_OPENGL_LIB -DQT_POSITIONING_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_QUICK_LIB -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQT_WEBCHANNEL_LIB -DWebEngineCore_EXPORTS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/WebEngineCore_autogen/include -I/home/qt/RTA/src-6.6.0/qtbase/include -I/home/qt/RTA/src-6.6.0/qtbase/include/QtWebEngineCore -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/.. -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/../../3rdparty/chromium -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/../../3rdparty/chromium/third_party/abseil-cpp -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/../../3rdparty/chromium/third_party/perfetto/include -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/../../3rdparty/chromium/third_party/boringssl/src/include -I/home/qt/RTA/src-6.6.0/qtbase/include/QtWebEngineCore/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtWebEngineCore/6.6.0/QtWebEngineCore -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/x86_64/gen -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/x86_64/gen/third_party/perfetto -I/home/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/x86_64/gen/third_party/perfetto/build_config -I/home/qt/RTA/src-6.6.0/qtbase/include/QtCore -I/home/qt/RTA/src-6.6.0/qtbase/mkspecs/linux-g++ -I/home/qt/RTA/src-6.6.0/qtbase/include/QtGui -I/home/qt/RTA/src-6.6.0/qtbase/include/QtNetwork -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQuick -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQml -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQmlIntegration -I/home/qt/RTA/src-6.6.0/qtdeclarative/src/qmlintegration -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQmlModels -I/home/qt/RTA/src-6.6.0/qtbase/include/QtOpenGL -I/home/qt/RTA/src-6.6.0/qtbase/src/corelib -I/home/qt/RTA/src-6.6.0/qtbase/include/QtCore/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtCore/6.6.0/QtCore -I/home/qt/RTA/src-6.6.0/qtbase/src/gui -I/home/qt/RTA/src-6.6.0/qtbase/include/QtGui/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtGui/6.6.0/QtGui -I/home/qt/RTA/src-6.6.0/qtdeclarative/src/quick -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQuick/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQuick/6.6.0/QtQuick -I/home/qt/RTA/src-6.6.0/qtdeclarative/src/qmlmodels -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQmlModels/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQmlModels/6.6.0/QtQmlModels -I/home/qt/RTA/src-6.6.0/qtdeclarative/src/qml -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQml/6.6.0 -I/home/qt/RTA/src-6.6.0/qtbase/include/QtQml/6.6.0/QtQml -I/home/qt/RTA/src-6.6.0/qtbase/include/QtWebChannel -I/home/qt/RTA/src-6.6.0/qtbase/include/QtPositioning -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -Wno-unused-parameter -fPIC -Wsuggest-override -std=c++17 -Winvalid-pch -include /home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/cmake_pch.hxx -MD -MT qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/qwebengineglobalsettings.cpp.o -MF qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/qwebengineglobalsettings.cpp.o.d -o qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/qwebengineglobalsettings.cpp.o -c /home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/qwebengineglobalsettings.cpp In file included from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/qtmetamacros.h:1, from /home/qt/RTA/src-6.6.0/qtbase/src/corelib/global/qnamespace.h:13, from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/qnamespace.h:1, from /home/qt/RTA/src-6.6.0/qtbase/src/corelib/kernel/qobjectdefs.h:12, from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/qobjectdefs.h:1, from /home/qt/RTA/src-6.6.0/qtbase/src/corelib/kernel/qobject.h:10, from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/qobject.h:1, from /home/qt/RTA/src-6.6.0/qtbase/src/corelib/animation/qabstractanimation.h:7, from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/qabstractanimation.h:1, from /home/qt/RTA/src-6.6.0/qtbase/include/QtCore/QtCore:13, from /home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/CMakeFiles/WebEngineCore.dir/cmake_pch.hxx:5, from <command-line>: /home/qt/RTA/src-6.6.0/qtwebengine/src/core/api/../../3rdparty/chromium/mojo/public/cpp/system/handle_signals_state.h:38:40: error: expected ‘,’ or ‘...’ before ‘public’ 38 | bool satisfies_any(MojoHandleSignals signals) const { | ^~~~~~~
Configure summary and last 1000 lines of build output attached.
Same build works with latest 6.5.2 sources, last working 6.6.0 snapshot was
76a06d574c30397b390758be1595e092cf15f385
there might have been later working snapshots, but haven't been able to test those.