Try to fix build with precompiled Qt headers

Do not read chromium headers with 'signals' defined

Pick-to: 6.6
Fixes: QTBUG-114457
Change-Id: I48977120c7de4e0be30ff47fe496deb6768f71a5
Reviewed-by: Michal Klocek <michal.klocek@qt.io>