src/core/api/qwebengineglobalsettings.cpp
@@ -1,11 +1,15 @@
 // Copyright (C) 2023 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
-#include "services/network/network_service.h"
-#include "content/public/browser/network_service_instance.h"
-
 #include "qwebengineglobalsettings.h"
 #include "qwebengineglobalsettings_p.h"
+
+#ifdef signals
+#undef signals
+#endif
+
+#include "content/public/browser/network_service_instance.h"
+#include "services/network/network_service.h"
 
 QT_BEGIN_NAMESPACE
 
